(lang dune 2.7)
(generate_opam_files true)
(source (github cdaringe/my.hood))
(license ISC)
(authors "cdaringe")
(maintainers "cdaringe")

(package
 (name hood)
 (synopsis "A super fun game")
 (description "Best game")
 (depends
  (alcotest :dev)
  (containers (>= 3))
  (dune (or :build :dev))
  (ocaml (>= 4.11.0))
  (ocaml-lsp-server :dev)
  (ocamlformat :dev)
 )
)
